Fixed Headshot Overlapping

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     position: relative; /*check this*/
     /*display: flex;
     justify-content: center;*/
-    margin-bottom: 0px;
+    margin-bottom: 40px;
 }
 
 .navbar .nav-list {
